# ImageBeautify

./: .gitignore  .qmake.stash  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  appveyor.yml  build.ps1  build.sh  report including one part.md  report tool and effect.md  report.md
MVC/: imageBeautify.pro
MVC/app/: main.cpp
MVC/filter/: colortoblack.cpp  colortoblack.h  defog.cpp  defog.h  sharpen.cpp
MVC/model/: imageoperations.cpp  imageoperations.h  log.cpp  transportmandq.h
MVC/test/: image.cpp  image.hpp
MVC/view/: clipdialog.h  curvecanvas.cpp  curvedialog.cpp  curvedialog.h  graymorphodialog.cpp  graymorphodialog.h  houghtransformdialog.h  leveldialog.h  structureelementcanvas.h
MVC/viewmodel/: photoshopgui.cpp  photoshopgui.h
MVVM/: effectsicons.qrc  imageBeautify.pro
MVVM/APP/: app.cpp  app.h  main.cpp
MVVM/common/: etlbase.h  parameters.h  type.h  util.cpp  util.h
MVVM/model/: model.cpp  model.h
MVVM/view/: algebraicdialog.cpp  algebraicdialog.h  binarymorphologydialog.cpp  binarymorphologydialog.h  classicspecialeffectdialog.cpp  clickableqlabel.cpp  clickableqlabel.h  clipdialog.cpp  clipdialog.h  curvedialog.cpp  dualthresholddialog.cpp  edgedetectiondialog.cpp  edgedetectiondialog.h  filterdialog.h  gamewindow.cpp  graymorphologydialog.cpp  graymorphologydialog.h  histogramdialog.cpp  histogramdialog.h  histogramview.h  houghcircledetectiondialog.cpp  houghcircledetectiondialog.h  huesaturalightdialog.cpp  leveldialog.cpp  leveldialog.h  mainview.cpp  mainview.h  scaledialog.cpp  scaledialog.h  specialeffectdialog.cpp  specialeffectdialog.h  structureelementcanvas.h
MVVM/viewmodel/: viewmodel.cpp  viewmodel.h
code/: test.pro  testCode.cpp
doc/: Image Beautify 模块报告之View层.docx  ImageBeautify模块报告之model层.docx
doc/plan/: planning.md
doc/requirement/: requirement.md
doc/technology/: techniques.md
model/: colortoblack.cpp  colortoblack.h  imageoperations.cpp
project/: ibproject.pro  imagecontainer.h  imagerc.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myMainWindow.pro  savedialog.cpp  savedialog.ui  tools.h
project/Include/: imageManager.h  mainwindow.h  savedialog.h
src/: image.cpp  image.hpp  main.cpp
src/filter/: inversecolor.cpp  inversecolor.h  sharpen.h
src/model/: colortoblack.cpp  colortoblack.h  imageoperations.cpp  log.h  transportmandq.cpp
src/view/: algebraicdialog.h  binarymorphodialog.cpp  binarymorphodialog.h  clipbox.cpp  clipbox.h  clipdialog.cpp  edgedetectiondialog.cpp  filterdialog.h  histogramdialog.cpp  houghtransformdialog.cpp  huesaturalightdialog.cpp  huesaturalightdialog.h  leveldialog.cpp  leveldialog.h  scaledialog.cpp  scaledialog.h  structureelementcanvas.cpp
src/viewmodel/: photoshopgui.cpp
temp/: imageBeautify.pro
temp/common/: etlbase.h  parameters.h  type.h  util.cpp  util.h
temp/model/: model.cpp  model.h  swmodel.h
temp/tmp/: imageBeautify.pro
temp/tmp/App/: app.h  (+1 more)
test/: exception.h  tools.h
view/: algebraicdialog.cpp  curvecanvas.cpp  dualthresholddialog.cpp  dualthresholddialog.h  edgedetectiondialog.h  filterdialog.cpp  histogramdialog.h  huesaturalightdialog.cpp  huesaturalightdialog.h  leveldialog.cpp
viewmodel/: photoshopgui.cpp  photoshopgui.h
(+167 files in other folders)
